tests/struct/duplicate_method.rev
struct Foo {
    fn a() {}
    fn a() {} // error: a method with this name already exists
}
